fix overflow cart

--- a/Client/src/components/ItemShoppingCart/ItemShoppingCart.module.css
+++ b/Client/src/components/ItemShoppingCart/ItemShoppingCart.module.css
@@ -10,6 +10,7 @@
   border: 0 solid #e5e7eb;
   padding: 15px;
   overflow: auto;
+  overflow-x: hidden;
 }
 .listLi {
   display: flex;
