--- a/Client/src/components/ShoppingCart/ShoppingCart.module.css
+++ b/Client/src/components/ShoppingCart/ShoppingCart.module.css
@@ -9,6 +9,7 @@
   border: 2px solid #e5e7eb;
   background-color: #fff; 
   overflow-y: auto;
+  overflow-x: hidden;
 }
 @media screen and (max-width: 744px) {
   .cartContainer {
